# sibyl

./: .gitignore  .pylintrc  Pipfile  Procfile  README.md  codecov.yml  manage.py  pyproject.toml
.github/workflows/: codeql.yml  deliver.yml  integrate.yml
analysis/: sibyl-hackathon.ipynb  sibyl-insights.ipynb
clients/: discord.py
community/: admin.py  models.py  tests.py  urls.py  views.py
community/migrations/: 0001_initial.py  0002_community_discord_log_channel_and_more.py  0002_initial.py  0003_alter_community_options.py
dominator/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
dominator/migrations/: 0001_initial.py  0002_initial.py  0002_remove_memberdominator_psycho_pass_and_more.py  0002_rename_dominator_memberdominator_messagedominator.py  0002_rename_profile_memberdominator_psycho_pass_and_more.py  0003_alter_memberdominator_options_and_more.py  0003_remove_memberdominator_discord_log_channel_and_more.py  0004_alter_memberdominator_crime_coefficient_100_action_and_more.py  0004_rename_identity_attack_trigger_memberdominator_identity_attack_threshold_and_more.py
managers/: admin.py  models.py  urls.py  views.py
managers/migrations/: 0001_initial.py  0002_remove_membermanager_crime_coefficient_and_more.py  0003_alter_membermanager_crime_coefficient_action_and_more.py  0004_rename_crime_coefficient_action_membermanager_crime_coefficient_100_action_and_more.py
profiles/: admin.py  models.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_rename_serverprofile_communityprofile.py  0003_alter_communityprofile_users_and_more.py  0004_alter_communityprofile_last_flag_and_more.py  0005_alter_communityprofile_last_flag_and_more.py  0006_alter_communityprofile_platform_id_and_more.py  0007_remove_communityprofile_identity_attack_and_more.py  0008_alter_communityprofile_users.py
psychopass/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
psychopass/migrations/: 0001_initial.py  0002_alter_communitypsychopass_options_and_more.py  0002_initial.py  0002_remove_userpsychopass_last_flag.py  0003_remove_communitypsychopass_community_id_and_more.py  0004_alter_userpsychopass_identity_attack_and_more.py  0005_alter_userpsychopass_identity_attack_and_more.py  0006_remove_userpsychopass_psycho_hazard.py
sibyl/: asgi.py  settings.py  urls.py  wsgi.py
sibyl/templates/: swagger-ui.html
